Fix overflow on nav from line-height in materialize

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -101,5 +101,6 @@ p {
 	z-index: 10000;
 }
 
-
-
+nav {
+	line-height: normal !important;
+}
